hphp/hack/test/typecheck/simplihack/hash_mismatches.php
<?hh
<<file: __EnableUnstableFeatures('simpli_hack')>>

<<__SimpliHack('A prompt', 'faceb00c')>>
class C {}
